titan/tests/ui/missing_repr.rs
use titan::SharedMemorySafe;

#[derive(SharedMemorySafe)]
struct MissingRepr {
    x: u32,
}

fn main() {}
